welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: illegal character '\u00b9'
    if (a<0 ? b<0){
            ^posNeg:-6: error: Missing closing brace `}' assumed here
try {
^posNeg:1: error: expected class or object definition
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
^posNeg:3: error: illegal character '\u00b9'
    if (a<0 ? b<0){
            ^posNeg:13: error: Missing closing brace `}' assumed here
 }
 ^